--- a/public/wix/Deploy/Product.wxs
+++ b/public/wix/Deploy/Product.wxs
@@ -20,7 +20,7 @@
     <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
 		<MediaTemplate EmbedCab="yes" />
 
-    <!-- The default directory structure when installing the state tool. This can be changed via the UI -->
+    <!-- The default directory structure when installing a language runtime. This can be changed via the UI -->
     <Directory Id='TARGETDIR' Name='SourceDir'>
       <Directory Id='INSTALLDIR' Name='Perl64'>
         <Component Id='DeployDir' Guid='7CF56E89-AA69-4A35-921C-F2CA2F9FE12B'>
@@ -53,7 +53,6 @@
       <ComponentRef Id='DeployDir' />
       <Component Id='InstallHelper' Directory="INSTALLDIR" Guid='4dda6117-ca9c-4371-a09d-c8575f520a01'>
         <!-- We save the value of the install directory to the registry so we can retrieve it on uninstall -->
-        <!-- TODO: Should this be a user key or a system wide key? -->
         <RegistryValue Root="HKLM" Key="Software\[Manufacturer]\[ProductName]" Name="InstallDir" Value="[INSTALLDIR]" Type="string"/>
         <RemoveFolder Id='CleanupApplicationFolder' On='uninstall' />
       </Component>
