--- a/public/wix/Deploy/Product.wxs
+++ b/public/wix/Deploy/Product.wxs
@@ -31,22 +31,21 @@
       </Directory>
     </Directory>
 
-    <Property Id='PerlExe' Value='bin\perl.lnk' />
-    <Property Id='WPerlExe' Value='bin\wperl.lnk' />
-    <Property Id='CmdExe' Value='cmd.exe' />
+    <Property Id='PerlExe' Value='perl.exe' />
+    <Property Id='WPerlExe' Value='wperl.exe' />
     
     <Feature Id='Complete' Level='1'>
       <Component Id='ProgIdPerl' Directory='TARGETDIR' Guid='4dda6117-ca9c-4371-a09d-c8575f520a02'>
         <!-- Perl file scripts -->
         <ProgId Id="Perl.Document" Description="!(loc.DescPL)" Advertise='no' Icon='PerlIco'>
           <Extension Id="pl" ContentType="text/x-perl">
-            <Verb Id="open" Command="!(loc.ExplorerMenuOpenPL)" TargetProperty="CmdExe" Argument="/c &quot;[PerlExe]&quot; &quot;%1&quot;" />
+            <Verb Id="open" Command="!(loc.ExplorerMenuOpenPL)" TargetProperty="PerlExe" Argument="/c &quot;%1&quot;" />
           </Extension>
         </ProgId>
         <!-- Windows perl file scripts (started with hidden console) -->
         <ProgId Id="WPerl.Document" Description="!(loc.DescPL)" Advertise='no' Icon='PerlIco'>
           <Extension Id="wpl" ContentType="text/x-w-perl">
-            <Verb Id="open" Command="!(loc.ExplorerMenuOpenPL)" TargetProperty="CmdExe" Argument="/c &quot;[WPerlExe]&quot; &quot;%1&quot;" />
+            <Verb Id="open" Command="!(loc.ExplorerMenuOpenPL)" TargetProperty="WPerlExe" Argument="/&quot;%1&quot;" />
           </Extension>
         </ProgId>
       </Component>
@@ -135,12 +134,7 @@
 			<Custom Action="StateCommandExists" After="CostFinalize">NOT Installed OR ((Installed AND NOT REINSTALL) AND NOT REMOVE~="ALL")</Custom>
 			<Custom Action="SetIsModify" After="StateCommandExists">(Installed AND NOT REINSTALL) AND NOT REMOVE~="ALL"</Custom>
 			<Custom Action="SetInstallDirOnModify" After="SetIsModify">(Installed AND NOT REINSTALL) AND NOT REMOVE~="ALL"</Custom>
-      <Custom Action="SetPerlExe" After="SetInstallDirOnModify">1</Custom>
-      <Custom Action="SetWPerlExe" After="SetPerlExe">1</Custom>
     </InstallUISequence>
-
-    <CustomAction Id="SetPerlExe" Property="PerlExe" Value="[INSTALLDIR]bin\perl.lnk" />
-    <CustomAction Id="SetWPerlExe" Property="WPerlExe" Value="[INSTALLDIR]bin\wperl.lnk" />
 
     <CustomAction Id="SetIsModify" Property="IS_MODIFY" Value="true" />
 		
@@ -168,9 +162,7 @@
 		<CustomAction Id="Uninstall" Impersonate="no" BinaryKey="UninstallCA" DllEntry="Uninstall" Execute="deferred" Return="check" />
 
 		<InstallExecuteSequence>
-      <Custom Action="SetPerlExe" After="InstallInitialize">1</Custom>
-      <Custom Action="SetWPerlExe" After="SetPerlExe">1</Custom>
-      <Custom Action="SetIsStateToolInstalled" After="SetWPerlExe">NOT Installed OR ((Installed AND NOT REINSTALL) AND NOT REMOVE~="ALL")</Custom>
+      <Custom Action="SetIsStateToolInstalled" After="InstallInitialize">NOT Installed OR ((Installed AND NOT REINSTALL) AND NOT REMOVE~="ALL")</Custom>
 			<Custom Action="Status" After="SetIsStateToolInstalled">NOT Installed OR ((Installed AND NOT REINSTALL) AND NOT REMOVE~="ALL")</Custom>
 			<Custom Action="InstallStateTool" After="Status">NOT Installed OR ((Installed AND NOT REINSTALL) AND NOT REMOVE~="ALL")</Custom>
 			<Custom Action="SetStateDeployPropertyValues" After="InstallStateTool">NOT Installed OR ((Installed AND NOT REINSTALL) AND NOT REMOVE~="ALL")</Custom>
