--- a/public/wix/Deploy/Product.wxs
+++ b/public/wix/Deploy/Product.wxs
@@ -7,6 +7,7 @@
 
     <!-- Configuration parameters -->
     <Property Id="PROJECT_NAME" Value="ActiveState/ActivePerl-5.26" />
+    <Property Id="PerlVersion" Value="5.26" />  <!-- Just the version number used to resolve the release notes link -->
     <!-- End Configuration parameters -->
     
     <!-- Design assets -->
