--- a/installers/msi-language/Product.p.wxs
+++ b/installers/msi-language/Product.p.wxs
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:util="http://schemas.microsoft.com/wix/UtilExtension">
-	<Product Id="{{ID}}" Name="{{PROJECT}}" Language="1033" Version="1.0.0.0" Manufacturer="ActiveState" UpgradeCode="a8b44798-ee47-4404-8ae3-d821e603b426">
+	<Product Id="{{ID}}" Name="{{NAME}}" Language="1033" Version="1.0.0.0" Manufacturer="ActiveState" UpgradeCode="a8b44798-ee47-4404-8ae3-d821e603b426">
 		<Package Id='*' Keywords='Installer' Description="ActiveState Language Runtime"
             Comments='State Tool is a registered trademark of ActiveState' Manufacturer='ActiveState'
             InstallerVersion='200' Languages='1033' Compressed='yes' SummaryCodepage='1252' InstallPrivileges='elevated' AdminImage='yes' InstallScope='perMachine' />
 
     <!-- Configuration parameters -->
-    <Property Id="PROJECT_NAME" Value="{{PROJECT_NAME}}" />
+    <Property Id="PROJECT_NAME" Value="{{PROJECT}}" />
     <Property Id="REL_NOTES" Value="{{REL_NOTES}}" />
 	<!-- A comma separated list of shortcuts to be installed -->
 	<!-- Expected possible values: [PerlCritic] or supply None to build no shortcuts -->
@@ -33,7 +33,7 @@
           <RegistryValue Root='HKLM' Key='SOFTWARE\[Manufacturer]\[ProductName]' Type='string' Value='' KeyPath='yes' />
         </Component>
 		<Directory Id="ProgramMenuFolder">
-			<Directory Id="ApplicationProgramsFolder" Name="{{PROJECT}}"/>
+			<Directory Id="ApplicationProgramsFolder" Name="{{NAME}}"/>
 		</Directory>
       </Directory>
     </Directory>
