--- a/installers/msi-language/Product.p.wxs
+++ b/installers/msi-language/Product.p.wxs
@@ -60,7 +60,7 @@
 		<RegistryValue Root='HKLM' Key='Software\Classes\.pl' Type='string' Value='Perl.Document' />
 		<RegistryValue Root='HKLM' Key='Software\Classes\WPerl.Document\shell\open\command' Type='string' Value='[INSTALLDIR]bin\wperl.exe &quot;%1&quot; %*' />
 		<RegistryValue Root='HKLM' Key='Software\Classes\.wpl' Type='string' Value='WPerl.Document' />
-		<Environment Id='UpdatePathExt' Name='PATHEXT' Action='set' Permanent='no' System='yes' Part='first' Value='.PL;WPL' />
+		<Environment Id='UpdatePathExt' Name='PATHEXT' Action='set' Permanent='no' System='yes' Part='first' Value='.PL;.WPL' />
       </Component>
       <ComponentRef Id='DeployDir' />
       <Component Id='InstallHelper' Directory="INSTALLDIR" Guid='4dda6117-ca9c-4371-a09d-c8575f520a01'>
