--- a/installers/msi-language/CustomExitDlg.wxs
+++ b/installers/msi-language/CustomExitDlg.wxs
@@ -14,10 +14,10 @@
         <Control Id="SuccessText" Type="Hyperlink" X="130" Y="80" Width="230" Height="65" Transparent="yes" Hidden="yes" Text="!(loc.ExitDialogSuccess)">
           <Condition Action="show">NOT Installed</Condition>
         </Control>
-        <Control Id="Link1" Type="Hyperlink" X="130" Y="145" Width="230" Height="50" Transparent="yes" Hidden="yes" Text="!(loc.ExitDialogLink1)">
+        <Control Id="StateToolWizardActionCheckBox" Type="CheckBox" X="130" Y="145" Width="230" Height="10" CheckBoxValue="1" Property="STATE_TOOL_WIZARD_CHECK_BOX" Hidden="yes" Text="!(loc.ExitDialogStateToolAction)">
           <Condition Action="show">NOT Installed</Condition>
         </Control>
-        <Control Id="Link2" Type="Hyperlink" X="130" Y="200" Width="230" Height="10" Transparent="yes" Hidden="yes" Text="!(loc.ExitDialogLink2)">
+        <Control Id="StateToolWizardReleaseNotesCheckBox" Type="CheckBox" X="130" Y="170" Width="230" Height="10" CheckBoxValue="1" Default="no" Property="STATE_TOOL_WIZARD_REL_NOTES_CHECK_BOX" Hidden="yes" Text="!(loc.ExitDialogReleaseNotesAction)">
           <Condition Action="show">NOT Installed</Condition>
         </Control>
 
